# aocpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
source/: Game.cpp  Game.h  audio.cpp  audio.h  engine.cpp  engine.h  main.cpp  resources.cpp  resources.h  surface.cpp  surface.h  texture.cpp  texture.h  window.cpp  window.h
